--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    font-family: 'Rubik', sans-serif;
+    font-family: "Rubik", sans-serif;
 }
 header {
     height: 300px;
@@ -56,5 +56,9 @@ li {
     padding: 5%;
 }
 input {
+    width: 40px;
+}
+#order {
+    border: 1px solid lightgrey;
     width: 40px;
 }
