--- a/style2.css
+++ b/style2.css
@@ -25,7 +25,7 @@ main {
 h2 {
     text-align: center;
 }
-.image-container {
+.img-container {
     width: 70px;
     height: 70px;
     position: relative;
@@ -34,7 +34,4 @@ h2 {
     position: absolute;
     width: 100%;
     height: 100%;
-}
-table {
-    /* grid-auto-flow: row; */
 }
