--- a/style.css
+++ b/style.css
@@ -7,42 +7,62 @@
 body {
     font-family: "Rubik", sans-serif;
 }
-header {
-    height: 300px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: black;
-}
-h1 {
-    align-self: center;
-    text-align: center;
-    color: white;
-    border-bottom: 10px solid orange;
+
+.logo-pic {
+    max-width: 60px;
+    max-height: 60px;
+    margin-right: 10px;
+    border-radius: 1px;
 }
 
-img {
-    max-width: 100%;
-    max-height: 100%;
+section {
+    padding: 0 5% 0 5%;
 }
+.order-page {
+    min-height: 100vh;
+}
+
+h1 {
+    text-align: center;
+    color: white;
+    border-bottom: 12px solid orange;
+    border-radius: 1px;
+}
+
 #product-container {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 20%;
-    grid-auto-flow: row;
-    grid-gap: 30px;
-    padding: 50px;
-    justify-content: center;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    grid-gap: 20px;
 }
+
 #cart-container {
     grid-row: 1 / span 4;
     grid-column: 4;
 }
+
+header {
+    background: black;
+    height: 350px;
+    margin-bottom: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .btn {
     max-width: 70px;
+    border-radius: 10px;
+    color: white;
+    border: 1px solid rgb(220, 220, 220);
 }
+
 .remove-btn {
     margin-left: 20px;
+    border: none;
+    background: none;
 }
+
 .product-card {
     padding: 5%;
     align-self: stretch;
@@ -50,15 +70,147 @@ img {
     border: 1px solid lightgray;
     border-radius: 5px;
 }
+
 li {
-    border: 1px solid orange;
+    border: 1px solid rgb(220, 220, 220);
     list-style: none;
     padding: 5%;
+    margin-bottom: 10px;
+    border-radius: 5px;
 }
-input {
-    width: 40px;
+
+li:nth-child(odd) {
+    background: rgb(237, 236, 236);
 }
-.image-container {
+
+.item-img {
+    max-width: 80px;
+    max-height: 80px;
+}
+
+.img-container {
     display: none;
 }
 
+.btn-order {
+    background: rgb(242, 178, 58);
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.btn-order:hover {
+    background: rgb(93, 233, 93);
+    transition: linear 300ms;
+}
+
+.order-link {
+    text-decoration: none;
+    color: white;
+}
+
+.order-link:hover {
+    text-decoration: none;
+    color: white;
+}
+
+.remove-all {
+    background-color: black;
+    color: white;
+    border-radius: 10px;
+    padding: 10px;
+}
+
+.remove-all:hover {
+    background-color: red;
+    transition: linear 300ms;
+}
+
+input {
+    border-radius: 5px;
+    border: 1px solid rgb(220, 220, 220);
+    width: 35px;
+}
+
+.footer {
+    background: black;
+    color: white;
+    height: 150px;
+    margin-top: 30px;
+    text-align: center;
+    padding-top: 30px;
+    font-size: 14px;
+}
+
+.footer-text {
+    margin: 0;
+}
+
+.json-link {
+    font-size: 18px;
+    color: rgb(242, 178, 58);
+}
+.json-link:hover {
+    color: white;
+    text-decoration: none;
+}
+
+.order-text {
+    font-size: 24px;
+    align-self: center;
+    margin-left: 20px;
+}
+
+.item-name {
+    display: flex;
+    padding: 20px;
+}
+
+.order-img {
+    border: 1px solid rgb(220, 220, 220);
+}
+
+.item-price {
+    margin-left: 40px;
+}
+
+.item-qty {
+    margin-right: 40px;
+}
+
+.back {
+    background: rgb(242, 178, 58);
+    border-radius: 10px;
+    padding: 10px;
+    color: white;
+}
+
+.back:hover {
+    color: white;
+    text-decoration: none;
+    background: rgb(93, 233, 93);
+    transition: linear 300ms;
+}
+
+.thank-u {
+    margin-top: 30px;
+}
+
+.receipt-total {
+    display: inline-block;
+    border-bottom: 2px solid rgb(242, 178, 58);
+}
+
+@media (max-width: 700px) {
+    #product-container {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+
+    #cart-container {
+        margin-top: 40px;
+    }
+
+    .product-card {
+        min-width: 200px;
+    }
+}
